# python-dev-toolbox

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/: CODEOWNERS
frameworks/fastapi/: Dockerfile  README.md
frameworks/fastapi/app/: main.py
frameworks/fastapi/app/core/: config.py
frameworks/fastapi_boilerplate/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frameworks/fastapi_boilerplate/app/: main.py
frameworks/fastapi_boilerplate/app/core/: config.py
frameworks/fastapi_crud/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
frameworks/fastapi_crud/database/: connection.py
frameworks/fastapi_crud/models/: task.py
frameworks/fastapi_crud/routers/: tasks.py
frameworks/fastapi_crud/services/: redis_client.py
tools/docker/python_base/: Dockerfile
